# governance-demo

./: .gitignore  README.md  pyproject.toml
configs/: roles.local.yaml
scripts/: demo.sh
src/govdemo/: cli.py
src/govdemo/common/: acl.py  audit.py  config.py  lineage.py  pii.py  time.py
src/govdemo/pipelines/: clean.py  curate.py  export.py  gdpr.py  identity.py  ingest.py  init.py  seed.py  serve.py
